# img-slice-tool

./: .gitmodules  CMakeLists.txt  Config.cmake  README.md
3rd/: CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp
app/src/core/: clipCtrl.h  fileCtrl.cpp  fileCtrl.h  imgCtrl.cpp  imgCtrl.h  joinCtrl.h  prstData.hpp
app/src/ui/: clipCtrlPanel.hpp  clipPicPanel.hpp  mainPanel.hpp
app/src/ui/unit/: imgUnit.h
app/src/ui/util/: polyTest.hpp  rectTest.hpp
res/rc/: icon.rc.in
